--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -144,7 +144,7 @@
     <!--申请查看未能过-->
     <view class="lockStyle" wx:if="{{show_detail != 1}}">
       <image class="lock" src="/img/img-suo2@2x.png"></image>
-      <image src="/img/img-bg@2x(2).png" class="lockBackground"> </image>
+      <image src="{{projectBack}}" class="lockBackground"> </image>
     </view>
 
   </view>
