--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -4,15 +4,15 @@
   <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">最新</view>
   <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">项目库</view>
 </view>
-  <!--筛选和搜索  -->
-<template is='search' data='{{SearchInit}}'></template>
-<template is='searchResult' data='{{SearchInit}}'></template>
 <!--项目展示列表  -->
 <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:865rpx" bindchange="bindChange">
   <!--模态层  -->
   <view class='t-modal' wx:if='{{SearchInit.currentIndex!=99}}' bindtap='modal'></view>
   <!--精选  -->
   <swiper-item data-current='0'>
+    <!--筛选和搜索  -->
+<template is='search' data='{{SearchInit}}'></template>
+<template is='searchResult' data='{{SearchInit}}'></template>
     <!--项目展示  -->
     <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'>
       <!--banner轮播  -->
@@ -35,6 +35,9 @@
   </swiper-item>
   <!--最新 -->
   <swiper-item data-current='1'>
+    <!--筛选和搜索  -->
+<template is='search' data='{{SearchInit}}'></template>
+<template is='searchResult' data='{{SearchInit}}'></template>
     <!--项目展示  -->
     <scroll-view scroll-y="true" bindscrolltolower="loadMore2">
       <template is="selectProject" data="{{list:financingNeed,type:2,timeShow:true}}"></template>
@@ -52,7 +55,7 @@
    <swiper-item data-current='2'>
     <scroll-view scroll-y="true"  style="height:100%;">
     <image class="xiangmu" src="{{imgUrls1}}"></image>
-    <view class="xiangmu1"></view>
+    <!-- <view class="/xiangmu1"></view> -->
     </scroll-view>
   </swiper-item>
 </swiper>
