--- a/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
+++ b/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxss
@@ -12,7 +12,14 @@ page {
   width: 100%;
    height: 327.6rpx;
 }
-
+.hasNothing {
+  margin-top: 410rpx;
+  font-size: 36rpx;
+  color: #999;
+  line-height: 20rpx;
+  text-align: center;
+  height: 400rpx;
+}
 .media {
   width: 100%;
   height: auto;
