--- a/Weitianshi/utils/wxss/organization.wxss
+++ b/Weitianshi/utils/wxss/organization.wxss
@@ -2,7 +2,7 @@
 
 #invest {
   /* padding: 42rpx 32rpx -2rpx 32rpx;  */
-  padding-top: 42rpx;
+  padding-top: 40rpx;
   /* padding-left: 32rpx;
   padding-right: 32rpx; */
   border-bottom: 0.5px solid #e6e6e6;
@@ -39,7 +39,7 @@
 
 #invest .investName {
   /* height: 37.44rpx; */
-  margin-bottom: 22rpx;
+  margin-bottom: 12rpx;
 }
 
 #invest .investName1 {
@@ -90,7 +90,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  margin-bottom: 24rpx;
+  margin-bottom: 15rpx;
   width: 102%;
 }
 
@@ -109,20 +109,24 @@
 }
 
 #invest .investDetail {
-  padding: 18rpx;
+  /* padding: 18rpx; */
+  padding-left: 18rpx;
+  padding-right: 18rpx;
+  padding-top: 18rpx;
+  padding-bottom: 15rpx;
   margin-top: 20rpx;
   font-size: 12px;
   color: #40587a;
   height: auto;
   /* max-height:75rpx;  */
-  line-height: 46rpx;
+  line-height: 42rpx;
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  margin-bottom: 30rpx;
+  margin-bottom: 40rpx;
   background: #fafafa;
 }
 
@@ -411,7 +415,7 @@
 #mediaNew .mediaType {
   font-size: 10px;
   color: #999;
-  padding-bottom: 24rpx;
+  padding-bottom: 40rpx;
 }
 
 #mediaNew .mediaTypeRight {
@@ -504,7 +508,7 @@
 
 #memberList1  .memberInfo {
   border-bottom: 1rpx solid #e6e6e6;
-  padding-bottom: 40rpx;
+  padding-bottom: 30rpx;
   /* padding-top: 40rpx; */
 }
 
