--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -7,12 +7,12 @@
 <!--项目展示列表  -->
 <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:865rpx" bindchange="bindChange">
   <!--模态层  -->
-  <view class='t-modal' wx:if='{{SearchInit.currentIndex!=99}}' bindtap='modal'></view>
+  <!-- <view class='t-modal' wx:if='{{SearchInit.currentIndex!=99}}' bindtap='modal'></view> -->
   <!--精选  -->
   <swiper-item data-current='0'>
     <!--筛选和搜索  -->
-<template is='search' data='{{SearchInit}}'></template>
-<!-- <template is='searchResult' data='{{SearchInit}}'></template> -->
+    <template is='search' data='{{SearchInit}}'></template>
+    <!-- <template is='searchResult' data='{{SearchInit}}'></template>  -->
     <!--项目展示  -->
     <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'>
       <!--banner轮播  -->
@@ -36,8 +36,8 @@
   <!--最新 -->
   <swiper-item data-current='1'>
     <!--筛选和搜索  -->
-<template is='search' data='{{SearchInit}}'></template>
-<!-- <template is='searchResult' data='{{SearchInit}}'></template> -->
+    <template is='search' data='{{SearchInit}}'></template>
+    <!-- <template is='searchResult' data='{{SearchInit}}'></template> -->
     <!--项目展示  -->
     <scroll-view scroll-y="true" bindscrolltolower="loadMore2">
       <template is="selectProject" data="{{list:financingNeed,type:2,timeShow:true}}"></template>
@@ -52,10 +52,10 @@
     </view>
   </swiper-item>
   <!--项目库  -->
-   <swiper-item data-current='2'>
-    <scroll-view scroll-y="true"  style="height:100%;">
-    <image class="xiangmu" src="{{imgUrls1}}"></image>
-    <!-- <view class="/xiangmu1"></view> -->
+  <swiper-item data-current='2'>
+    <scroll-view scroll-y="true" style="height:100%;">
+      <image class="xiangmu" src="{{imgUrls1}}"></image>
+      <!-- <view class="/xiangmu1"></view> -->
     </scroll-view>
   </swiper-item>
 </swiper>
