--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxss
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxss
@@ -182,6 +182,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  border-radius: 4rpx;
 }
 
 .searchImage {
@@ -325,6 +326,7 @@
 
 .industryContent {
   width: 128rpx;
+  color:#666;
 }
 
 .industryContent:last-child {
