--- a/Weitianshi/pages/organization/org_library/org_library.wxss
+++ b/Weitianshi/pages/organization/org_library/org_library.wxss
@@ -5,3 +5,11 @@
   width: 100%;
   height: 280rpx;
 }
+
+.hasNothing {
+  margin-top: 410rpx;
+  font-size: 36rpx;
+  color: #999;
+  line-height: 36rpx;
+  text-align: center;
+}
