--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -868,7 +868,7 @@
 <!--筛选和搜索  -->
 <template name='search'>
   <!--筛选和搜索  -->
-  <view id='searchModel' class="screen flex" wx:if="{{currentTab != 0}}">
+  <view id='searchModel' class="screen flex" wx:if="{{hidden}}">
     <!--筛选  -->
     <block wx:for='{{SearchInit.tab}}' wx:key='index'>
       <view class='tabIndex {{SearchInit.currentIndex==index || item.arr==true?"deepBlue" : ""}}' data-index='{{index}}' data-label='{{item.label}}' bindtap='move'>
@@ -1322,7 +1322,7 @@
       <view class="invest1Left">
         <view class="investGroupLeft">
           <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}"></image>
-          <image src="/img/warband-logo.png"  wx:if="{{item.investment_logo==''}}" class="investGroupLeft"></image>
+          <image src="/img/warband-logo.png" wx:if="{{item.investment_logo==''}}" class="investGroupLeft"></image>
         </view>
         <view class="match1" class="{{item.industry_list.length!=0||item.style_list.length!=0 ? 'match1' : 'match2'}}">匹配度</view>
         <view class="match">{{item.match_rate}}%</view>
@@ -1346,9 +1346,14 @@
         <view class="flex" wx:if="{{item.style_list.length!=0}}">
           <label class="tapCase">标签</label>
           <view class="mainCaseContent">
-            <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:if="{{item.style_list.length != 0}}" wx:for-item="styleList">
-              <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label>
-              <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label>
+             <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:for-item="styleList">
+              <label>{{styleList.style_name}}、</label>
+              <!-- <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label> -->
+              <!-- <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label> -->
+            </block>
+            <block wx:for="{{item.type_list}}" wx:key="{{index}}" wx:for-item="typeList">
+              <label wx:if="{{index <  item.type_list.length-1}}">{{typeList.type_name}}、</label>
+              <label wx:if="{{index == item.type_list.length-1}}">{{typeList.type_name}}</label>
             </block>
           </view>
         </view>
