--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -6,9 +6,9 @@
   <view class="swiper-tab-list {{currentTab==3 ? 'on' : ''}}" data-current="3" bindtap="swichNav">我的人脉</view>
 </view>
 <!--筛选和搜索  -->
-<template is='search' data='{{SearchInit,currentTab}}'></template>
+<template is='search' data='{{SearchInit,currentTab,hidden}}'></template>
 <!--项目展示列表  -->
-<swiper current="{{currentTab}}" class="{{currentTab == 0 ? 'swiper-box-other' : 'swiper-box'}}" duration="300" bindchange="bindChange">
+<swiper current="{{currentTab}}" class="swiper-box" duration="300" bindchange="bindChange">
   <!--模态层  -->
   <!-- <view class='t-modal' wx:if='{{SearchInit.currentIndex!=99}}' bindtap='modal'></view> -->
   <swiper-item data-current='0'>
