--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -5,10 +5,10 @@
   <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">项目库</view>
 </view>
 <!--筛选和搜索  -->
-<template is='search' data='{{SearchInit}}'></template>
+<template is='search' data='{{SearchInit,hidden}}'></template>
 <!-- <template is='searchResult' data='{{SearchInit}}'></template>  -->
 <!--项目展示列表  -->
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:865rpx" bindchange="bindChange">
+<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:865rpx"  bindchange="bindChange">
   <!--精选  -->
   <swiper-item data-current='0'>
     <!--项目展示  -->
