--- a/Weitianshi/pages/organization/subPage/guide_help/guide_help.wxml
+++ b/Weitianshi/pages/organization/subPage/guide_help/guide_help.wxml
@@ -3,7 +3,7 @@
 <block wx:for="{{project}}" wx:key="{{index}}">
   <view class="contentBox">
     <view class="title">{{item.num}}、<label class="littleTitle">【{{item.title}}】</label>投资方的投资思路</view>
-    <view class="investmentSpecial"><label class="special">投资特点</label>{{item.special}}</view>
+    <view class="investmentSpecial"><label class="special">投资特点：</label>{{item.special}}</view>
     <view class="project">典型机构：{{item.organization}}</view>
     <!-- <view class="project">投资项目：{{item.projectList}}</view> -->
   </view>
