--- a/Weitianshi/pages/matchInvestor/matchInvestor.wxss
+++ b/Weitianshi/pages/matchInvestor/matchInvestor.wxss
@@ -240,6 +240,107 @@ height:81px; */
   margin-bottom: 40rpx;
   margin-top: 210rpx;
 }
-.afterIdentity{
-  
+.modalBox {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 9999999;
+}
+
+.contactModalBox {
+  height: 652rpx;
+  width: 506rpx;
+  background-color: white;
+  margin-top: 206rpx;
+  margin-left: 79rpx;
+  padding: 40rpx 32rpx 32rpx 32rpx;
+  position: relative;
+  z-index: 99999999;
+  border-radius: 4rpx;
+}
+
+.modalTitle {
+  font-size: 32rpx;
+  color: #333;
+  line-height: 32rpx;
+  text-align: center;
+  margin-bottom: 16rpx;
+}
+
+.modalContent {
+  border: 1rpx solid #e6e6e6;
+  /* width:504rpx; */
+  height: 258rpx;
+  margin-bottom: 48rpx;
+  margin-right: 0;
+  outline: none;
+  padding-top: 20rpx;
+  padding-left: 24rpx;
+  font-size: 28rpx;
+  color: #999;
+  line-height: 28rpx;
+}
+
+.modalTips {
+  font-size: 28rpx;
+  color: #666;
+  line-height: 40rpx;
+  text-align: center;
+  padding: 0 28rpx;
+}
+
+.btn {
+  background: #40587a;
+  border-radius: 6rpx;
+  width: 506rpx;
+  height: 88rpx;
+  font-size: 32rpx;
+  color: #fff;
+  line-height: 88rpx;
+  text-align: center;
+  margin-top: 72rpx;
+}
+
+.close {
+  width: 48rpx;
+  height: 48rpx;
+  position: absolute;
+  top: 185rpx;
+  right: 78rpx;
+  z-index: 999999999;
+}
+
+.aPic {
+  height: 250rpx;
+  width: 276rpx;
+  margin: 96rpx 0 62rpx 118rpx;
+}
+
+.newBox {
+  color: #333;
+}
+
+.searchNothing {
+  font-size: 24rpx;
+  color: #999;
+  letter-spacing: 0;
+  line-height: 24rpx;
+  text-align: center;
+  margin-top: 252rpx;
+}
+
+.searchLine {
+  margin-bottom: 72rpx;
+  height: 2rpx;
+  margin-left: 32rpx;
+  margin-right: 32rpx;
+  border-bottom: 2rpx dashed #999;
+  width: 90%;
+}
+
+.dropDown {
+  top: 160rpx;
 }
