--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -41,11 +41,11 @@
           <view class="blockTitle">热门领域</view>
           <view class="allThing" bindtap="toGoIndustry">全部<label>（{{investormentList.industry_list.industry_total_num}}）</label></view>
         </view>
-        <view class="blockIntro">* 近一年行业热门投资的相关数据</view>
+        <view class="blockIntro">* 近期创投媒体热议领域</view>
         <view class="industryTitleBlock flex">
           <view class="industryTitle">领域</view>
           <view class="industryTitle">已投机构</view>
-          <view class="industryTitle">获投项目</view>
+          <view class="industryTitle">创业项目</view>
           <view class="industryTitle">媒体热度</view>
         </view>
         <block wx:for="{{investormentList.industry_list.list}}" wx:key="{{index}}">
