--- a/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxml
+++ b/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxml
@@ -4,11 +4,11 @@
   <view class="flex title">
     <view class="blockTitle">热门领域</view>
   </view>
-  <view class="blockIntro">* 近一年行业热门投资的相关数据</view>
+  <view class="blockIntro">* 近期创投媒体热议领域</view>
   <view class="industryTitleBlock flex">
     <view class="industryTitle">领域</view>
     <view class="industryTitle">已投机构</view>
-    <view class="industryTitle">获投项目</view>
+    <view class="industryTitle">创业项目</view>
     <view class="industryTitle">媒体热度</view>
   </view>
     <block wx:for="{{industry_list}}" wx:key="{{index}}">
