--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -54,7 +54,7 @@
             <view class="industryContent">{{item.investment_num}}</view>
             <view class="industryContent">{{item.event_num}}</view>
             <view class="industryContent flex">
-              <view>{{item.media_hot}}</view>
+              <view class="industryNum">{{item.media_hot}}</view>
               <image src="/img/icon-jiantouxia@2x.png" class="arrow" wx:if="{{item.status == 2}}"></image>
               <image src="/img/icon-jiantoushang@2x.png" class="arrow" wx:if="{{item.status == 1}}"></image>
               <view class="up" wx:if="{{item.status == 1}}">{{item.media_fix}}</view>
