--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1152,9 +1152,15 @@
 
         </view>
         <view class="investIndury">
-          <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:for-item="industryList">
-            <view class="investInduryone" wx:if="{{index <  item.industry_list.length-1}}">{{industryList.industry_name}}、</view>
-            <view class="investInduryone" wx:if="{{index == item.industry_list.length-1}}">{{industryList.industry_name}}</view>
+          <block wx:for="{{item.industry_list}}" wx:for-item="industryList">
+            <view>{{industryList.industry_name}}</view>
+            <!-- <view wx:if="{{item.industry_list.length==1}}">
+              <view class="investInduryone" wx:if="index==1">{{industryList.industry_name}}</view>
+            </view> 
+            <view wx:if="{{item.industry_list.length>1}}">
+              <view class="investInduryone" wx:if="{{index< item.industry_list.length-1}}">{{industryList.industry_name}}、</view>
+              <view class="investInduryone" wx:if="{{index== item.industry_list.length-1}}">{{industryList.industry_name}}</view>
+            </view> -->
           </block>
         </view>
         <view class="investOther flex">
@@ -1346,7 +1352,7 @@
         <view class="flex" wx:if="{{item.style_list.length!=0}}">
           <label class="tapCase">标签</label>
           <view class="mainCaseContent">
-             <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:for-item="styleList">
+            <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:for-item="styleList">
               <label>{{styleList.style_name}}、</label>
               <!-- <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label> -->
               <!-- <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label> -->
