11-17-霍春阳-下班
1.添加打分功能
2.添加分享二维码页面和功能

--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -266,6 +266,7 @@
               <view class="moreInfo" bindtap="moreInfo" wx:if="{{moreInfo !=4 &&project.pro_develop.length >2}}" data-id="{{4}}">展开</view>
               <view class="moreInfo" bindtap="noMoreInfo" wx:if="{{moreInfo == 4}}" data-id="{{4}}">收起</view>
             </view>
+            <view class="projectScore">项目打分</view>
             <!--FA签约-->
             <!-- <view class="signFA" wx:if="{{project.pro_FA}}">
               <view class="signFABox flex">
@@ -302,6 +303,7 @@
               </view>
             </view> -->
           </view>
+
           <view style="height:36rpx;"></view>
         </view>
       </scroll-view>
