--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -1385,3 +1385,22 @@ button::after {
 .investBox view {
   text-align: left;
 }
+
+/*项目打分  */
+
+.projectScore {
+  position: fixed;
+  background: #fc703e;
+  border: 0 solid #e0e6ed;
+  box-shadow: 0 0 4px 0 rgba(64, 88, 122, 0.20);
+  width: 166rpx;
+  height: 66rpx;
+  bottom: 168rpx;
+  font-size: 28rpx;
+  color: #fff;
+  letter-spacing: 0;
+  line-height: 66rpx;
+  text-align: left;
+  right: 0;
+  border-radius: 35rpx 0 0 35rpx;
+}
