--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -77,7 +77,7 @@ page {
 
 .userInfo {
   position: absolute;
-  top: 184rpx;
+  top: 40rpx;
   left: 32rpx;
 }
 
@@ -395,7 +395,7 @@ page {
 
 .dropDown {
   position: absolute;
-  top: 160rpx;
+  top: 175rpx;
   left: 0;
   background: white;
   z-index: 999;
@@ -595,8 +595,10 @@ page {
 
 /*----------------------game---------------------------------------  */
 .scrollFrame{
-  width: 100%;
+  width: 95%;
   overflow-x: scroll;
+  margin-bottom: 32rpx;
+  margin-top: 32rpx;
 }
 .scroll{
   width: 759rpx;
@@ -604,17 +606,26 @@ page {
 }
 .item{
   width:160rpx;
+  min-width: 160rpx;
   height: 112rpx;
   background: white;
-  margin-right: 32rpx;
+  margin-left: 32rpx;
   border-radius: 8rpx;
+  text-align: center;
 }
 .item .itemName{
-
+  font-size: 26rpx;
+  color: #333;
+  margin-bottom: 16rpx;
+  margin-top: 24rpx;
 }
 .item .itemNum{
-  
+  font-size: 22rpx;
+  color: #999;
 }
 .itemhover{
   background:#e6e6e6;
+}
+.t-modal{
+  top: 175rpx;
 }
