--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -122,7 +122,7 @@ page {
 .shopDesBox .shopContent {
   font-size: 24rpx;
   color: #999;
-  line-height: 26rpx;
+  line-height: 36rpx;
   text-align: left;
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
@@ -130,13 +130,13 @@ page {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  height: 78rpx;
+  /* height: 78rpx; */
 }
 
 .shopDesBox .shopContentAfer {
   font-size: 24rpx;
   color: #999;
-  line-height: 26rpx;
+  line-height: 36rpx;
   text-align: left;
   height: auto;
 }
