--- a/Weitianshi/pages/my/projectShop/shopShare/shopShare.wxml
+++ b/Weitianshi/pages/my/projectShop/shopShare/shopShare.wxml
@@ -1,7 +1,9 @@
 <view class="outside">
   <view class="box">
-    <view class="shopTitle">张三的项目店铺,最多显示两行内容</view>
-    <view class="qrCode"></view>
+    <view class="shopTitle">{{userInfo.user_intro}}</view>
+    <view class="qrCode">
+                <image class="QR_pic" src="{{access_token}}"></image>
+    </view>
     <view class="tips"> 长按或微信扫码查看更多</view>
   </view>
 </view>
