--- a/Weitianshi/pages/my/projectShop/shopShare/shopShare.wxss
+++ b/Weitianshi/pages/my/projectShop/shopShare/shopShare.wxss
@@ -1,4 +1,5 @@
 /* pages/my/projectShop/shopShare/shopShare.wxss */
+
 .box {
   margin: 90rpx;
   padding: 54rpx 48rpx 0 48rpx;
@@ -10,10 +11,15 @@
   color: #333;
   line-height: 68rpx;
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .qrCode {
-  margin: 62rpx 140rpx 116rpx 140rpx;
+  /* margin: 62rpx 140rpx 116rpx 140rpx; */
 }
 
 .tips {
@@ -23,6 +29,7 @@
   line-height: 28rpx;
   text-align: center;
 }
+
 /*按鈕  */
 
 .aboutNetwork {
@@ -38,19 +45,27 @@
 }
 
 #shareFriend {
-  margin-top: 28rpx;
-  border-right: 1rpx solid #fff;
   padding-right: 116rpx;
   padding-left: 120rpx;
   border-radius: 0;
-    line-height: 88rpx;
+  line-height: 88rpx;
   color: #fff;
   font-size: 28rpx;
   background: #40587a;
   display: inline;
+  border:none;
+  border-right: 1rpx solid #fff;
+}
+button::after{
+  border: none;
+}
+.savePic {
+  padding-right: 88rpx;
+  padding-left: 88rpx;
 }
 
-.savePic {
-  padding-right:88rpx;
-  padding-left: 88rpx;
+.QR_pic {
+  width: 288rpx;
+  height: 288rpx;
+  margin: 62rpx 94rpx 116rpx 94rpx;
 }
