--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -140,7 +140,7 @@
       </view>
     </view>
        <!--项目打分  -->
-          <view class="projectScore"  bindtap="projectRemark">项目打分</view>
+          <view class="projectScore" wx:if="{{score==true}}"  bindtap="projectRemark">项目打分</view>
     <!--三个tab页  -->
     <include src='/utils/wxml/threeTab.wxml' />
     <!--申请查看未能过-->
