--- a/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxss
+++ b/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxss
@@ -103,9 +103,9 @@
   height: 120rpx;
   margin: 0 auto;
   font-size: 24rpx;
-  color: #ccc;
+  color: #333;
   text-align: left;
-  padding: 24rpx 26rpx;
+  padding: 20rpx 20rpx;
 }
 
 .scoreItem {
@@ -114,7 +114,7 @@
   background: #fff;
   margin-top: 32rpx;
   padding: 32rpx;
-  margin-bottom: 140rpx;
+  margin-bottom: 190rpx;
 }
 
 .scoreTitle {
@@ -158,13 +158,14 @@
 }
 
 .scoreItem1Right input {
-  margin-top: 20rpx;
+  /* margin-top: 20rpx; */
   width: 140rpx;
   height: 80rpx;
   border: 2rpx solid #e6e6e6;
   font-size: 14px;
   color: #333;
   text-align: center;
+  border-radius:5rpx;
 }
 
 .total {
