--- a/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxss
+++ b/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxss
@@ -34,13 +34,13 @@
   font-size: 24px;
   color: #fc703e;
   margin: 0 auto;
-  width: 110rpx;
+  width: 180rpx;
   text-align: center;
   margin-bottom: 20rpx;
 }
 
 .scaleIntroduce {
-  width: 200rpx;
+  width: 300rpx;
   font-size: 14px;
   color: #fc703e;
   margin: 0 auto;
@@ -109,11 +109,14 @@
 }
 
 .scoreItem {
-  width: 100%;
+  width: 95%;
   height:auto;
   background: #fff;
   margin-top: 32rpx;
-  padding: 32rpx;
+  /* padding: 32rpx; */
+  padding-bottom: 32rpx;
+  padding-top: 32rpx;
+  padding-left: 32rpx;
   margin-bottom: 190rpx;
 }
 
