--- a/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxss
+++ b/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxss
@@ -110,7 +110,7 @@
 
 .scoreItem {
   width: 95%;
-  height:auto;
+  height: auto;
   background: #fff;
   margin-top: 32rpx;
   /* padding: 32rpx; */
@@ -168,7 +168,7 @@
   font-size: 14px;
   color: #333;
   text-align: center;
-  border-radius:5rpx;
+  border-radius: 5rpx;
 }
 
 .total {
@@ -181,12 +181,14 @@
   font-size: 20px;
   color: #fc703e;
   width: 30%;
- text-align: center
+  text-align: center;
 }
-.totalTotal{
+
+.totalTotal {
   margin-top: 32rpx;
 }
-.submit{
+
+.submit {
   width: 100%;
   height: 90rpx;
   position: fixed;
@@ -195,6 +197,7 @@
   text-align: center;
   line-height: 90rpx;
   background: #40587a;
-  font-size:14px;
-color:#ffffff;
+  font-size: 14px;
+  color: #fff;
+  z-index: 111;
 }
