--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -1395,7 +1395,23 @@ button::after {
   box-shadow: 0 0 4px 0 rgba(64, 88, 122, 0.20);
   width: 166rpx;
   height: 66rpx;
-  bottom: 168rpx;
+  top: 368rpx;
+  font-size: 28rpx;
+  color: #fff;
+  letter-spacing: 0;
+  line-height: 66rpx;
+  text-align: center;
+  right: 0;
+  border-radius: 35rpx 0 0 35rpx;
+}
+.projectScore1 {
+  position: fixed;
+  background: #fc703e;
+  border: 0 solid #e0e6ed;
+  box-shadow: 0 0 4px 0 rgba(64, 88, 122, 0.20);
+  width: 166rpx;
+  height: 66rpx;
+  bottom: 268rpx;
   font-size: 28rpx;
   color: #fff;
   letter-spacing: 0;
