--- a/Weitianshi/pages/my/identity/identityResult/identityResult.wxml
+++ b/Weitianshi/pages/my/identity/identityResult/identityResult.wxml
@@ -34,7 +34,7 @@
     <view class="statusTitle" wx:if="{{status == 2}}">{{group_title}}认证审核通过</view>
     <view class="statusTitle" wx:if="{{status == 3}}">{{group_title}}认证审核未通过</view>
     <view>认证会员将由微天使创始人直接服务 </view>
-    <view>加FA哥微信weitianshicn</view>
+    <view>加FA哥微信weitianshiFA</view>
   </view>
 </view>
 <textarea id="textContent" bindinput="leaveMessage" maxlength="500" placeholder="如需认证其他身份，可在此留言" />
