--- a/Weitianshi/pages/register/personInfo/personInfo.wxss
+++ b/Weitianshi/pages/register/personInfo/personInfo.wxss
@@ -8,6 +8,12 @@ page {
   padding: 0 48rpx;
 }
 
+#bindPhone {
+  font-size: 28rpx;
+  color: #333;
+  padding: 0 48rpx;
+}
+
 .title {
   justify-content: center;
   padding: 64rpx 0;
@@ -70,6 +76,21 @@ input {
   margin-right: 46rpx;
 }
 
+.nextBtn1 {
+  background: #40587a;
+  position: relative;
+  padding: 0 36rpx;
+  color: white;
+  font-size: 32rpx;
+  border-radius: 200rpx;
+  width: 304rpx !important;
+  display: inline-block
+}
+
+.nextBtn1:first-child {
+  margin-right: 46rpx;
+}
+
 /*微信绑定  */
 
 .WXbind {
@@ -99,8 +120,4 @@ button::after {
   margin:0 12rpx;
   font-size: 28rpx;
   color:#cccccc;
-}
-
-.error {
-  bottom: 346rpx;
 }
