--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -884,7 +884,7 @@
       <view class='flex dropFlex' scroll-y='true'>
         <block wx:for='{{SearchInit.tab}}' wx:key='{{item.label}}'>
           <template wx:if='{{item.type==1}}' is='searchDropItem' data='{{SearchInit,item,label:item.label,itemId:item.itemId,itemName:item.itemName,longCheckBox:item.longCheckBox,index}}'></template>
-          <template wx:if='{{item.type==2}}' is='searchDropItem3' data='{{label_industry,SearchInit,item,label:item.label,itemId:item.itemId,itemName:item.itemName,longCheckBox:item.longCheckBox,index,page:item.page}}'></template>
+          <template wx:if='{{item.type==2}}' is='searchDropItem3' data='{{linkDataShow,SearchInit,item,label:item.label,itemId:item.itemId,itemName:item.itemName,longCheckBox:item.longCheckBox,index,page:item.page}}'></template>
         </block>
       </view>
       <!--重置确定  -->
@@ -936,8 +936,33 @@
   </view>
 </template>
 
+<!--筛选下拉框(单个)  type3 -->
 <template name='searchDropItem3'>
-  1111
+   <view id="linkedDrop" class="flex" hidden='{{SearchInit.currentIndex!=index}}'>
+    <!--一级标签  -->
+    <scroll-view scroll-y="true" class="frame_province">
+      <view>
+        <block wx:for="{{linkDataShow.firstStair}}" wx:for-index='idx' wx:key="{{item[itemId]}}">
+          <view class="province" style="background:{{item.check==true?'white':''}}" bindtap="linkFirstStair">
+            {{item[itemName]}}
+          </view>
+        </block>
+      </view>
+    </scroll-view>
+    <!--二级标签  -->
+    <scroll-view scroll-y="true" class="frame_city">
+      <view style='height:100%;'>
+        <view class="city" style="background:{{backgroundcity[idx2]==1?'#ccc':''}}" bindtap='linkCheckAll'>全部</view>
+        <block wx:for="{{linkDataShow.secondStair}}" wx:for-item='item2' wx:for-index='idx2' wx:key="{{item2[itemId]}}">
+          <!--page代表一级联动的index,idx2代表二级联动的index  -->
+          <view class="city" wx:key="{{item2[itemId]}}" style="background:{{item2.check == true?'#ccc':''}}" bindtap="linkSecondStair">
+            {{item2[itemName]}}
+            <image wx:if='{{item2.check == true}}' class='gouhao' src='/img/icon-gou@2x.png'></image>
+          </view>
+        </block>
+      </view>
+    </scroll-view>
+  </view>
 </template>
 
 <!--筛选结果展示横列(全部)  -->
@@ -1378,4 +1403,4 @@
       </view>
     </view>
   </block>
-</template>
+</template> 
