--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -302,8 +302,7 @@
               </view>
             </view> -->
           </view>
-          <!--项目打分  -->
-          <view class="projectScore" wx:if="{{score}}"  bindtap="projectRemark">项目评价</view>
+         
           <view style="height:36rpx;"></view>
         </view>
       </scroll-view>
@@ -699,4 +698,6 @@
       </scroll-view>
     </swiper-item>
   </swiper>
+   <!--项目打分  -->
+          <view class="projectScore" wx:if="{{score&&currentTab==0}}"  bindtap="projectRemark">项目评价</view>
 </view>
