--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1,5 +1,5 @@
 <!--发布投资需求和资源需求的按钮-->
-<template name="publish">
+<template name="publish"> 
   <view wx:if="{{hasPublic==0}}">
     <view class="publish publish2 publish_find_project publish-investmentm" bindtap="{{jumpProject}}">
       <view>{{text.text1}}</view>
@@ -938,7 +938,7 @@
 
 <!--筛选下拉框(单个)  type3 -->
 <template name='searchDropItem3'>
-   <view id="linkedDrop" class="flex" hidden='{{SearchInit.currentIndex!=index}}'>
+   <view id="linkedDrop" class="flex" hidden='{{SearchInit.currentIndex != index}}'>
     <!--一级标签  -->
     <scroll-view scroll-y="true" class="frame_province">
       <view>
@@ -955,7 +955,7 @@
         <view class="city" style="background:{{backgroundcity[idx2]==1?'#ccc':''}}" bindtap='linkCheckAll'>全部</view>
         <block wx:for="{{linkDataShow.secondStair}}" wx:for-item='item2' wx:for-index='idx2' wx:key="{{item2[itemId]}}">
           <!--page代表一级联动的index,idx2代表二级联动的index  -->
-          <view class="city" wx:key="{{item2[itemId]}}" style="background:{{item2.check == true?'#ccc':''}}" bindtap="linkSecondStair">
+          <view class="city" wx:key="{{item2.industry_id}}" style="background:{{item2.check == true?'#ccc':''}}" data-id='{{item2.industry_id}}' bindtap="linkSecondStair">
             {{item2[itemName]}}
             <image wx:if='{{item2.check == true}}' class='gouhao' src='/img/icon-gou@2x.png'></image>
           </view>
