--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -380,7 +380,7 @@
 
 <!--精选项目卡片&&投资项目卡片-->
 <template name="selectedCard">
-  <view class="selectProjectDetail">
+  <view class="selectProjectDetail"> 
     <view class="weui-panel__bd">
       <view class="weui-media-box weui-media-box_text select_project" data-id='{{myProject.project_id}}' data-index="{{index}}" bindtap="yourDetail">
         <view class="weui-media-box__title weui-media-box__title_in-text" style="text-align:left;">{{myProject.pro_intro}}</view>
@@ -1047,7 +1047,8 @@
           <view class="t-seeNum">{{item.view_count}}人看过项目</view>
           <view class="t-interest flex">
             <view class="t-appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
-            <view class="t-toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" catchtap="matchApply">申请查看</view>
+             <view class="t-toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" catchtap="matchApply">申请查看</view> 
+            <!-- <button  class="t-toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}">申请查看</button> -->
             <view class="t-refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
             <view class="t-refuseToRead t-readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
             <view wx:if="{{item.relationship_button == 5}}"></view>
