--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -4,7 +4,7 @@
   <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">最新</view>
   <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">项目库</view>
 </view>
-<!--筛选和搜索  -->
+<!--筛选和搜索  --> 
 <template is='search' data='{{SearchInit,hidden}}'></template>
 <!-- <template is='searchResult' data='{{SearchInit}}'></template>  -->
 <!--项目展示列表  -->
@@ -60,7 +60,7 @@
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <!--人脉王浮标  -->
-<view class="competitor" bindtap="competitor">人脉王大赛</view>
+<!-- <view class="competitor" bindtap="competitor">人脉王大赛</view> -->
 <!--电脑上传扫一扫  -->
 <view class="modalBox" hidden="{{modalBox==0}}">
   <view class="classname" bindtap="closeModal">
