--- a/Weitianshi/pages/my/my/my.wxml
+++ b/Weitianshi/pages/my/my/my.wxml
@@ -64,4 +64,4 @@
   </view>
 </view>
 <!--人脉大赛  -->
-<view class="competitor" bindtap="competitor">人脉王大赛</view>
+<!-- <view class="competitor" bindtap="competitor">人脉王大赛</view> -->
