--- a/Weitianshi/pages/match/match/investDemand/investDemand.wxml
+++ b/Weitianshi/pages/match/match/investDemand/investDemand.wxml
@@ -28,8 +28,8 @@
     <view class="text">投资金额*</view>
     <navigator url="/pages/form/scale/scale" id="payMoney">
       <view class="slect flex">
-      <view wx:if="{{payMoney.length == 0}}">选择金额</view>
-        <view class="{{payMoney =='选择金额' ? '':'checkOn'}}">{{payMoney}}</view>
+      <view wx:if="{{tran_scale.length == 0}}">选择金额</view>
+        <view class="{{payMoney =='选择金额' ? '':'checkOn'}}"><block wx:for="{{tran_scale}}" wx:key="{{index}}">{{item.scale_money}},</block></view>
         <image class="downArrow" src="/img/downArrow.png"></image>
       </view>
     </navigator>
